{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 87,
  "lineage": "b3885ec1-f4bb-25b7-898e-5008fd5b8a68",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "AppGate",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdn_list": [],
                "fqdns": [],
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/backendAddressPools/gpitfutre-AppGw-dev-beap",
                "ip_address_list": [],
                "ip_addresses": [],
                "name": "gpitfutre-AppGw-dev-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/backendHttpSettingsCollection/gpitfutre-AppGw-dev-be-htst",
                "name": "gpitfutre-AppGw-dev-be-htst",
                "path": "/path/",
                "pick_host_name_from_backend_address": false,
                "port": 443,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Https",
                "request_timeout": 1
              }
            ],
            "custom_error_configuration": [],
            "disabled_ssl_protocols": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/frontendIPConfigurations/gpitfutre-AppGw-dev-feip",
                "name": "gpitfutre-AppGw-dev-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/publicIPAddresses/gpitfutre-pip-dev",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/frontendPorts/gpitfutre-AppGw-dev-feport",
                "name": "gpitfutre-AppGw-dev-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/gatewayIPConfigurations/gpitfutre-gwip",
                "name": "gpitfutre-gwip",
                "subnet_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-gateway-dev"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/frontendIPConfigurations/gpitfutre-AppGw-dev-feip",
                "frontend_ip_configuration_name": "gpitfutre-AppGw-dev-feip",
                "frontend_port_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/frontendPorts/gpitfutre-AppGw-dev-feport",
                "frontend_port_name": "gpitfutre-AppGw-dev-feport",
                "host_name": "",
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/httpListeners/gpitfutre-AppGw-dev-httplstn",
                "name": "gpitfutre-AppGw-dev-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev",
            "identity": [],
            "location": "uksouth",
            "name": "gpitfutre-AppGw-dev",
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/backendAddressPools/gpitfutre-AppGw-dev-beap",
                "backend_address_pool_name": "gpitfutre-AppGw-dev-beap",
                "backend_http_settings_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/backendHttpSettingsCollection/gpitfutre-AppGw-dev-be-htst",
                "backend_http_settings_name": "gpitfutre-AppGw-dev-be-htst",
                "http_listener_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/httpListeners/gpitfutre-AppGw-dev-httplstn",
                "http_listener_name": "gpitfutre-AppGw-dev-httplstn",
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/applicationGateways/gpitfutre-AppGw-dev/requestRoutingRules/gpitfutre-AppGw-dev-rqrt",
                "name": "gpitfutre-AppGw-dev-rqrt",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "gpitfutre-vnet-dev",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_Medium",
                "tier": "WAF"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "",
                "policy_type": ""
              }
            ],
            "tags": {},
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkInterfaces/gpitfutre-nic-dev",
            "ip_configuration": [
              {
                "name": "gpitfutre-staticip-dev",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-bastion-dev"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-0D-3A-7E-E8-83",
            "name": "gpitfutre-nic-dev",
            "private_ip_address": "10.100.0.4",
            "private_ip_addresses": [
              "10.100.0.4"
            ],
            "resource_group_name": "gpitfutre-vnet-dev",
            "virtual_machine_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vm-dev/providers/Microsoft.Compute/virtualMachines/gpitfutre-bastion-dev"
          },
          "depends_on": [
            "azurerm_subnet.bastion",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-aks-dev",
            "location": "uksouth",
            "name": "gpitfutre-aks-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-bastion-dev",
            "location": "uksouth",
            "name": "gpitfutre-bastion-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "gateway",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-gateway-dev",
            "location": "uksouth",
            "name": "gpitfutre-gateway-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "splunk",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-splunk-dev",
            "location": "uksouth",
            "name": "gpitfutre-splunk-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Pip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "fqdn": "66210ada-78d8-4227-a385-08891b5393b8.cloudapp.net",
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/publicIPAddresses/gpitfutre-pip-dev",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.143.156.148",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "gpitfutre-pip-dev",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "gpitfutre-vnet-dev",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.2.0/24",
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-aks-dev",
            "ip_configurations": [
              "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-akspool-dev/providers/Microsoft.Network/networkInterfaces/aks-gpitdevpool1-24473744-nic-0/ipConfigurations/ipconfig1"
            ],
            "name": "gpitfutre-aks-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "virtual_network_name": "gpitfutre-vnet-dev"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.0.0/24",
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-bastion-dev",
            "ip_configurations": [
              "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkInterfaces/gpitfutre-nic-dev/ipConfigurations/gpitfutre-staticip-dev"
            ],
            "name": "gpitfutre-bastion-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "virtual_network_name": "gpitfutre-vnet-dev"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.1.0/24",
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-gateway-dev",
            "name": "gpitfutre-gateway-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "virtual_network_name": "gpitfutre-vnet-dev"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "splunk",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.3.0/24",
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-splunk-dev",
            "name": "gpitfutre-splunk-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "virtual_network_name": "gpitfutre-vnet-dev"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "aks",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-aks-dev",
            "network_security_group_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-aks-dev",
            "subnet_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-aks-dev"
          },
          "depends_on": [
            "azurerm_network_security_group.aks",
            "azurerm_subnet.aks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-bastion-dev",
            "network_security_group_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-bastion-dev",
            "subnet_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-bastion-dev"
          },
          "depends_on": [
            "azurerm_network_security_group.bastion",
            "azurerm_subnet.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "gateway",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-gateway-dev",
            "network_security_group_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/networkSecurityGroups/gpitfutre-gateway-dev",
            "subnet_id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-gateway-dev"
          },
          "depends_on": [
            "azurerm_network_security_group.gateway",
            "azurerm_subnet.gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/21"
            ],
            "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev",
            "location": "uksouth",
            "name": "gpitfutre-vnet-dev",
            "resource_group_name": "gpitfutre-vnet-dev",
            "subnet": [
              {
                "address_prefix": "10.100.0.0/24",
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-bastion-dev",
                "name": "gpitfutre-bastion-dev"
              },
              {
                "address_prefix": "10.100.1.0/24",
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-gateway-dev",
                "name": "gpitfutre-gateway-dev"
              },
              {
                "address_prefix": "10.100.2.0/24",
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-aks-dev",
                "name": "gpitfutre-aks-dev"
              },
              {
                "address_prefix": "10.100.3.0/24",
                "id": "/subscriptions/7b12a8a2-f06f-456f-b6f9-aa2d92e0b2ec/resourceGroups/gpitfutre-vnet-dev/providers/Microsoft.Network/virtualNetworks/gpitfutre-vnet-dev/subnets/gpitfutre-splunk-dev",
                "name": "gpitfutre-splunk-dev"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "depends_on": [
            "azurerm_resource_group.virtual_network"
          ]
        }
      ]
    }
  ]
}